--- a/ui/components/findwidget.ui
+++ b/ui/components/findwidget.ui
@@ -12,7 +12,7 @@
   </property>
   <property name="font">
    <font>
-    <bold>true</bold>
+    <bold>false</bold>
    </font>
   </property>
   <property name="windowTitle">
