Improvement on the UI of dialogs

--- a/ui/dialogs/artistedit.ui
+++ b/ui/dialogs/artistedit.ui
@@ -188,6 +188,12 @@
            <fontweight>ExtraLight</fontweight>
           </font>
          </property>
+         <property name="frameShape">
+          <enum>QFrame::Shape::StyledPanel</enum>
+         </property>
+         <property name="frameShadow">
+          <enum>QFrame::Shadow::Sunken</enum>
+         </property>
          <property name="text">
           <string>Oops! No albums found for this artist!</string>
          </property>
@@ -199,10 +205,10 @@
        <item>
         <widget class="QListView" name="playlistView">
          <property name="frameShape">
-          <enum>QFrame::Shape::NoFrame</enum>
+          <enum>QFrame::Shape::StyledPanel</enum>
          </property>
          <property name="frameShadow">
-          <enum>QFrame::Shadow::Plain</enum>
+          <enum>QFrame::Shadow::Sunken</enum>
          </property>
          <property name="horizontalScrollBarPolicy">
           <enum>Qt::ScrollBarPolicy::ScrollBarAlwaysOff</enum>
