--- a/ui/dialogs/editor/abstractplaylisteditor.ui
+++ b/ui/dialogs/editor/abstractplaylisteditor.ui
@@ -162,6 +162,12 @@
        <fontweight>ExtraLight</fontweight>
       </font>
      </property>
+     <property name="frameShape">
+      <enum>QFrame::Shape::StyledPanel</enum>
+     </property>
+     <property name="frameShadow">
+      <enum>QFrame::Shadow::Sunken</enum>
+     </property>
      <property name="text">
       <string>Oops! There's nothing here!</string>
      </property>
@@ -195,10 +201,10 @@
       </font>
      </property>
      <property name="frameShape">
-      <enum>QFrame::Shape::NoFrame</enum>
+      <enum>QFrame::Shape::StyledPanel</enum>
      </property>
      <property name="frameShadow">
-      <enum>QFrame::Shadow::Plain</enum>
+      <enum>QFrame::Shadow::Sunken</enum>
      </property>
      <property name="lineWidth">
       <number>1</number>
